# totr

./: .gitignore  README.md  config.json  pyproject.toml
benchmark/: ablation.py  base.py  bench.py
benchmark/ReACT/: react.py
benchmark/baseline/: baseline.py
benchmark/bench_tasks/: hotpotqa.py  metrics.py  multihoprag.py  musique.py
benchmark/ircot/: __init__.py  ircot.py  qa.py  retriever.py
benchmark/react/: config.py  react.py
configs/hotpotqa/: Llama-3.1-8B-Instruct.json  Llama-3.2-1B-Instruct.json  Llama-3.2-3B-Instruct.json  Meta-Llama-3-8B-Instruct.json  Meta-Llama-3-8B.json  Meta-Llama-3.1-8B-Instruct.json  Meta-Llama-3.1-8B-Instruct_no_context.json  Meta-Llama-3.1-8B-Instruct_react.json  Qwen2.5-7B-Instruct.json  flan-t5-large.json
configs/multihoprag/: Llama-3.1-8B-Instruct.json  Meta-Llama-3.1-8B-Instruct.json  Qwen2.5-7B-Instruct.json
configs/musique/: Llama-3.1-8B-Instruct.json  Meta-Llama-3.1-8B-Instruct.json  Qwen2.5-7B-Instruct.json
datasets/MultihopRAG/: multihop_dev_set.json
datasets/frames/: frames_dev_set.json  frames_test_set.json
datasets/hotpotqa/: hotpotqa_dev.jsonl  hotpotqa_test.jsonl
datasets/multihoprag/: multihoprag_dev.json  multihoprag_test.json  multihoprag_test_set.json
datasets/musique/: musique_dev.jsonl  musique_test.jsonl
notebooks/: results.ipynb
prompts/: flan-to-llama-converter.py  llama_examples.txt
prompts/MultihopRAG/: multihop_prompt.txt  multihop_prompt_creator.py
prompts/frames/: tsv2python.py
prompts/hotpotqa/: ReAct_qa.txt  cot_qa_llama.txt  direct_qa_llama.txt  no_context_cot_qa_llama.txt  no_context_direct_qa_llama.txt  prompt_converter_cot.py  prompt_converter_direct.py  react_qa_llama.txt
prompts/multihoprag/: cot_prompt_updated.txt  cot_qa_llama.txt  direct_prompt_updated.txt  direct_qa_llama.txt  multihop_direct.txt  multihop_direct_updated.txt  no_context_cot_qa_llama.txt  no_context_direct_qa_llama.txt  (+4 more)
results/: summary.csv
scripts/: download_processed_data.sh  download_raw_data.sh  download_results.sh  format.sh  sbatch_vllm.sh  serve_tgi.sh  serve_vllm.sh
tests/: test_elasticsearch.py  test_ircot.py  test_ircot_retriever.py  test_local_llm.py  test_openai_llm.py  test_react.py  test_read_prompt.py  test_scr.py  test_scr_retriever.py  test_totr.py  test_totr_retriever.py
(+37 files in other folders)
